# youtube-transcript-sample

./: .cspell.json  README.md  package-lock.json  pyproject.toml  requirements-dev.txt
src/: get-transcript.py  get_transcript.py
